Added links to errata, EGR 323 PS#10, PS#11

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/08/2019 2:33 pm)
+                                >(Last update: 4/10/2019 9:53 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -102,7 +102,12 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		<DO>Do +10.86, 10.87, +10.88, 10.96, +10.106</DO>.<br>&nbsp;
 		Note:  More problems will be added to this     <br>&nbsp;
-		assignment before 4/15.                        <br>&nbsp;<small>
+		assignment before 4/15.                        <br>&nbsp;
+		                                               <br>&nbsp;
+		Note errata in <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P768"
+		>Figure 10.34 (a)</a>.                         <br>&nbsp;
+		                                        <br>&nbsp;<small>
 		(On 4/08 Prof <span style="font-family:Garamond; 
 			font-size:120%">d</span><span style="font-family:Garamond; 
 			font-size:80%">DB</span> delayed the due date         <br>&nbsp;
@@ -129,7 +134,11 @@ PS                                                           <BR>
 				non-dom. HF poles, open-cct time const.<br>&nbsp;
 		Read 10.5, 10.6                                <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do +10.63, +10.66, 10.80, +10.84</DO>.
+		<DO>Do +10.63, +10.66, 10.80, +10.84</DO>.     <br>&nbsp;
+		                                               <br>&nbsp
+		Note errata on <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P800_10p80"
+		>Problem 10.80</a>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  9
