EGR 170 PS#7, PS#8 solutions posted

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/05/2019 1:37 am)
+                              >(Last update: 4/11/2019 4:07 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -109,17 +109,35 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
         &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  DAQ Hardware, Analog, digital signals <br>&nbsp;
-		Read in:  Essick 3rd, Chapter 5                <br>&nbsp;
-		Or read: Essick 4th, Chapters 5 and 6          <br>&nbsp;
+		Read in:  Essick 3rd, Chapters 5, 8, 9         <br>&nbsp;
+		Or read: Essick 4th, Chapters 5, 6, 9, 10      <br>&nbsp;
 		All students should notice extended material   <br>&nbsp;
 		contained on classroom slides for 4/04, 4/11   <br>&nbsp;
 		                                               <br>&nbsp;
-        <D5>All students do homework:</D5> <a href=
+		Do homework in <D5>Essick, 3rd ed.             <br>&nbsp;
+		    <a href=
+		   "https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		   >5.A</a>,<!-- alias demo -->
+			8.1, <!-- seven segment display-->
+			8.A, <!-- traffic light -->
+			9.1, <!-- 5 blinking lights -->
+			9.8  <!-- time to press OK -->
+			                                      </D5><br>&nbsp;
+		Or do homework in <DO>Essick, 4th ed.          <br>&nbsp;
+		    <a href=
+		   "https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		   >5.A</a>, <!-- alias demo -->
+			9.1, <!-- seven segment display-->
+			8.A, <!-- traffic light -->
+			10.1, <!-- 5 blinking lights -->
+			10.8  <!-- time to press OK -->
+			                                       </DO><br>&nbsp;
+                                                       <br>&nbsp;
+		(Click this <a href=
 		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
-		>5.A</a>                                       <br>&nbsp;
-		(Click <a href=
+		>link</a> to view homework problem <a href=
 		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
-		>link</a> to view homework problem.)           <br>&nbsp;
+		>5.A</a>.)           <br>&nbsp;
                                                        <br>&nbsp;
         Note: At least one more problem will be added  <br>&nbsp;
 		to this problem set before Thursday, 4/11.
@@ -136,6 +154,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>4/11</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
+        <a href=
+        "https://dordt.instructure.com/files/145947559/download?download_frd=1"
+        >sol'n</a>
         &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  NI LabVIEW MathScript, XY Plots, File/IO<br>&nbsp;
@@ -147,7 +168,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			4.6, <!-- projectile range -->
 			6.3 <!-- 4 text files --></D5>             <br>&nbsp;
 			                                           <br>&nbsp;
-		Or do homework in <DO>Essick, 4rd ed.          <br>&nbsp;
+		Or do homework in <DO>Essick, 4th ed.          <br>&nbsp;
 		    4.2, <!-- plot a spiral -->
 			4.6, <!-- projectile range -->
 			7.3 <!-- 4 text files --></DO>             <br>&nbsp;
@@ -172,7 +193,10 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>4/04</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        ---
+        <a href=
+        "https://dordt.instructure.com/files/145947581/download?download_frd=1"
+        >sol'n</a>
+        &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  NI LabVIEW introduction, loops, wave- <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
