Problem 8.A will be available soon, EGR 170 PS#8

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/11/2019 4:07 pm)
+                              >(Last update: 4/11/2019 4:12 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -139,8 +139,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
 		>5.A</a>.)           <br>&nbsp;
                                                        <br>&nbsp;
-        Note: At least one more problem will be added  <br>&nbsp;
-		to this problem set before Thursday, 4/11.
+        Note: Problem 8.A will be available soon.
 
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
