EGR 170 added problem 8.A to PS#9

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/11/2019 4:12 pm)
+                              >(Last update: 4/11/2019 7:45 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -116,28 +116,45 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		                                               <br>&nbsp;
 		Do homework in <D5>Essick, 3rd ed.             <br>&nbsp;
 		    <a href=
-		   "https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		   "https://dordt.instructure.com/files/145949118/download?download_frd=1"
 		   >5.A</a>,<!-- alias demo -->
 			8.1, <!-- seven segment display-->
-			8.A, <!-- traffic light -->
+		    <a href=
+		   "https://dordt.instructure.com/files/145956097/download?download_frd=1"
+			>8.A</a>, <!-- traffic light -->
 			9.1, <!-- 5 blinking lights -->
 			9.8  <!-- time to press OK -->
 			                                      </D5><br>&nbsp;
 		Or do homework in <DO>Essick, 4th ed.          <br>&nbsp;
 		    <a href=
-		   "https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		   "https://dordt.instructure.com/files/145949118/download?download_frd=1"
 		   >5.A</a>, <!-- alias demo -->
 			9.1, <!-- seven segment display-->
-			8.A, <!-- traffic light -->
+		    <a href=
+		   "https://dordt.instructure.com/files/145956097/download?download_frd=1"
+			>8.A</a>, <!-- traffic light -->
 			10.1, <!-- 5 blinking lights -->
 			10.8  <!-- time to press OK -->
 			                                       </DO><br>&nbsp;
                                                        <br>&nbsp;
+		A partial VI for problem 8.A is avalable <a href=
+		"https://dordt.instructure.com/files/145956090/download?download_frd=1"
+		>here</a>.                                     <br>&nbsp;
+		You will need to unzip the folder you download.<br>&nbsp;
+		To make it work, you need to edit the file     <br>&nbsp;
+		paths in the block diagram to match the place  <br>&nbsp;
+		where you put the files.                       <br>&nbsp;
+                                                       <br>&nbsp;
 		(Click this <a href=
-		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		"https://dordt.instructure.com/files/145949118/download?download_frd=1"
 		>link</a> to view homework problem <a href=
-		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		"https://dordt.instructure.com/files/145949118/download?download_frd=1"
 		>5.A</a>.)           <br>&nbsp;
+		(Click this <a href=
+		"https://dordt.instructure.com/files/145956097/download?download_frd=1"
+		>link</a> to view homework problem <a href=
+		"https://dordt.instructure.com/files/145956097/download?download_frd=1"
+		>8.A</a>.)           <br>&nbsp;
                                                        <br>&nbsp;
         Note: Problem 8.A will be available soon.
 
@@ -171,7 +188,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		    4.2, <!-- plot a spiral -->
 			4.6, <!-- projectile range -->
 			7.3 <!-- 4 text files --></DO>             <br>&nbsp;
-			                                           <br>&nbsp;
+		                                               <br>&nbsp;
 		Hints:          							   <br>&nbsp;
 		4.2 Create <i>x</i>, <i>y</i>, in Mathscript, bundle, XY Graph<br>&nbsp;
 		x.3 For loop iterates from 0 to 3.  Iteration  <br>&nbsp; &nbsp; &nbsp; &nbsp;
