EGR 170 PS#9 fixed a typo

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/11/2019 7:45 pm)
+                              >(Last update: 4/11/2019 7:56 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -156,7 +156,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		"https://dordt.instructure.com/files/145956097/download?download_frd=1"
 		>8.A</a>.)           <br>&nbsp;
                                                        <br>&nbsp;
-        Note: Problem 8.A will be available soon.
+        (No further problems will be added to this set.)
 
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
