EGR 323 added Ch 11 problems to PS#11.  Fixed a type in Sedra & Smith 7th errata

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/10/2019 9:53 pm)
+                                >(Last update: 4/12/2019 2:22 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -98,20 +98,23 @@ PS                                                           <BR>
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: HF performance of diff amp, darlington <br>&nbsp; 
-		Read 10.7, 10.8                                <br>&nbsp;
+		Read 10.7, 10.8, 11.1, 11.2, 11.3, 11.4        <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do +10.86, 10.87, +10.88, 10.96, +10.106</DO>.<br>&nbsp;
-		Note:  More problems will be added to this     <br>&nbsp;
-		assignment before 4/15.                        <br>&nbsp;
+		<DO>Do +10.86, 10.87, +10.88, 10.96, +10.106,  <br>&nbsp;
+		11.1, 11.3, 11.19, 11.24</DO>.                 <br>&nbsp;
 		                                               <br>&nbsp;
 		Note errata in <a href=
 		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P768"
 		>Figure 10.34 (a)</a>.                         <br>&nbsp;
+		Note errata on <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P817"
+		>Pages 817 and 818</a>.                         <br>&nbsp;
 		                                        <br>&nbsp;<small>
 		(On 4/08 Prof <span style="font-family:Garamond; 
 			font-size:120%">d</span><span style="font-family:Garamond; 
 			font-size:80%">DB</span> delayed the due date         <br>&nbsp;
-		from 4/12 to 4/19.)</small>		
+		from 4/12 to 4/19.  On 4/12 he added the Chapter 11       <br>&nbsp;
+		problems.  No further problems will be added to this PS.)</small>		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 10
