--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -523,7 +523,7 @@ If your printing of the textbook shows the line as,
    line is consistent with the answer given in the instructor's 
    solution manual.  It also, "just makes sense," because 
    usually <i>C<sub>gd</sub></i> < <i>C<sub>gs</sub></i>.
-   <i>(Posted 4/10/2019)</i></blockquote>
+   <i>(Posted 4/10/2019)</i></small></blockquote>
    
 <!-- Can't find this in the 7th            <A NAME="P668"></A><b>
 Page 668, Problem 8.11.</b><br>
