--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -251,13 +251,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/145663147/download?download_frd=1"><!-- -->
 	  4/08<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/10<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/12<!-- --</a><!-- --></td>
+      4/10<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/146012891/download?download_frd=1"><!-- -->
+      4/12<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->HF performance of: differential amplifier, CS CE with degen, Darlington<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Test #2</b><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Hist of feedback, 4 adv of fb:  gain stbility, BW ext, intf redctn, disto redcn<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
