Added hints for Problem 8.A, PS#9, EGR 170

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/11/2019 7:56 pm)
+                              >(Last update: 4/15/2019 8:52 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -145,6 +145,10 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		paths in the block diagram to match the place  <br>&nbsp;
 		where you put the files.                       <br>&nbsp;
                                                        <br>&nbsp;
+		Some hints are Problem 8.A are available <a href=
+		"https://dordt.instructure.com/files/146090425/download?download_frd=1"
+		>here</a>.                                     <br>&nbsp;
+		                                               <br>&nbsp;
 		(Click this <a href=
 		"https://dordt.instructure.com/files/145949118/download?download_frd=1"
 		>link</a> to view homework problem <a href=
