Fixed a typo in EGR 170 PS$9

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/15/2019 8:52 am)
+                              >(Last update: 4/16/2019 11:56 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -134,7 +134,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		   "https://dordt.instructure.com/files/146015603/download?download_frd=1"
 			>8.A</a>, <!-- traffic light -->
 			10.1, <!-- 5 blinking lights -->
-			10.8  <!-- time to press OK -->
+			10.6  <!-- time to press OK -->
 			                                       </DO><br>&nbsp;
                                                        <br>&nbsp;
 		A partial VI for problem 8.A is avalable <a href=
@@ -160,7 +160,13 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		"https://dordt.instructure.com/files/146015603/download?download_frd=1"
 		>8.A</a>.)           <br>&nbsp;
                                                        <br>&nbsp;
-        (No further problems will be added to this set.)
+        (No further problems will be added to this set.)<br>&nbsp;<small>
+		(On 4/16 at about Noon Prof <span style="font-family:Garamond; 
+			font-size:120%">d</span><span style="font-family:Garamond; 
+			font-size:80%">DB</span>  changed Problem 10.8<br>&nbsp;
+		to Problem 10.6 on the list of problems for the 4th<br>&nbsp;
+		edition of the textbook.  This corrected a typogaphic<br>&nbsp;
+		error.  The 4th edition has no Problem 10.8.)
 
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
