EGR 323 daily slides.  Also noted assesment day for EGR 170

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -262,14 +262,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/146116951/download?download_frd=1"><!-- -->
-	  4/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/17<!-- --</a><!-- --><br><!-- --<a href=
+	  4/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/146253118/download?download_frd=1"><!-- -->
+      4/17<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       4/19<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->An implication of duality: Four types of electrical feedback<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->An example of series-shunt feedback&mdash;finding loop gain.  Problem 10.24<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
