--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/12/2019 2:22 pm)
+                                >(Last update: 4/19/2019 8:27 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,26 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+12
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/19
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/26<br><!-- <span style="color: #CC4444";>&#9673;</span> -->
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Feedback circuits, advantages, stability<br>&nbsp; 
+		Read 11.7, 11.8, 11.9, 11.10        <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do                                         <br>&nbsp;
+		+11.83, 11.84, +11.87, +11.89, +11.97, +11.104.</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 11
