--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/16/2019 11:56 am)
+                              >(Last update: 4/22/2019 5:32 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -94,6 +94,23 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+  --
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        ---
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        ---
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        ---
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Note:                                          <br>&nbsp;
+		PS#9 is the last problem set for the semester. <br>&nbsp;
+		No further regular homework assignments will be<br>&nbsp;
+		made.  Use the time to finish your project.
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
   9
