Errata Sedra & Smith, pages 801, L15

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 4/10/2019)<br> 
+                    (last update 4/23/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -525,6 +525,13 @@ If your printing of the textbook shows the line as,
    usually <i>C<sub>gd</sub></i> < <i>C<sub>gs</sub></i>.
    <i>(Posted 4/10/2019)</i></small></blockquote>
    
+                                       <A NAME="P801_10p96"></A><b>
+Page 801, Problem 10.96, second line of the problem statement</b><br>
+Replace &quot;<i>g<sub>gd</sub></i> = 0.01 pF&quot; with 
+&quot;<i>C<sub>gd</sub></i> = 0.01 pF&quot;<br>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<small>
+   <i>(Posted 4/23/2019)</i></small><br><br>
+   
 <!-- Can't find this in the 7th            <A NAME="P668"></A><b>
 Page 668, Problem 8.11.</b><br>
    Change "<i>v<sub>id</sub></i> = <i>v</i><sub><i>G</i>2</sub> 
@@ -752,6 +759,14 @@ Appendix L, Page L-13, Answers to Problem 10.3.</b><br>
    The correct answers are 9 &mu;F, 98.2 Hz, 9.82 Hz.<br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 3/12/2019)</small></i><br><br>
+      
+                                           <A NAME="L13_10P3"></A><b>
+Appendix L, Page L-15, Answer to Problem 10.106(b).</b><br>
+   The answer given for part (b) is wrong.<br>
+   The correct answer is 2.66 kHz.<blockquote><small>
+   
+   This error also appears in the instructor's solution manual.<br> 
+   <i>(Posted 4/23/2019)</i></blockquote>
       
 <!--                                           <A NAME="A1_9"></A><b>
 Page I-1, Answer to Problem 1.9.</b><br>
