EGR 323 PS#13 published.  Also fixed a type on Sedra & Smith 7e errata

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -766,7 +766,7 @@ Appendix L, Page L-15, Answer to Problem 10.106(b).</b><br>
    The correct answer is 2.66 kHz.<blockquote><small>
    
    This error also appears in the instructor's solution manual.<br> 
-   <i>(Posted 4/23/2019)</i></blockquote>
+   <i>(Posted 4/23/2019)</i></small></blockquote>
       
 <!--                                           <A NAME="A1_9"></A><b>
 Page I-1, Answer to Problem 1.9.</b><br>
