EGR 323 status of PS#12 updated

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/26/2019 10:44 am)
+                                >(Last update: 4/26/2019 2:59 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -109,7 +109,7 @@ PS                                                           <BR>
         4/19
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        4/26<br><!-- <span style="color: #CC4444";>&#9673;</span> -->
+        4/26<br><span style="color: #CC4444";>&#9673;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!-- <a href=
