EGR 323 slides for 4/24, 4/26 posted

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -257,7 +257,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->HF performance of: differential amplifier, CS CE with degen, Darlington<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Test #2</b><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Hist of feedback, 4 adv of fb:  gain stbility, BW ext, intf redctn, disto redcn<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><b>Ch 11</b> Hist of feedback, 4 advantages of feedback<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -275,15 +275,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/146482146/download?download_frd=1"><!-- -->
-	  4/22<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/24<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/26<!-- --</a><!-- --></td>
+	  4/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/146777109/download?download_frd=1"><!-- -->
+      4/24<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/146777039/download?download_frd=1"><!-- -->
+      4/26<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->The effect of feedback on closed-loop poles, single & double pole loci<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment-->Tripple-pole root loci, gain and phase margin, margins from Bode plots<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment-->Frequency Compensation, Pole S;litting, <b>Ch 12</b> Intro, amplifier classes<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
