EGR 323 daily slides

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -165,7 +165,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>President's day, Prof. <span style="font-family:Garamond"><big>d</big><small>DB</small></span> elected to have no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Ch 10</b> Introduction, Def'n Bode plot etc., sinusoidal ss analysis via diff eq<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Remainder of DE solution, phasor exmaple and tranfer fnctn, Bode himself<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 2/25------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/143616421/download?download_frd=1"><!-- -->
@@ -178,7 +178,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Bode plots:  how to plot constants, poles and  zeros w/ negative real parts.<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Test #1</b><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Bode plots:  poles and zeros at zero, complex conjugate poles and zeros.<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 3/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/143957189/download?download_frd=1"><!-- -->
@@ -191,7 +191,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Bode plots:  Q and Bandwidth;  Low frequency response of CS amplifier<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Probs F.1, F.4; LF response of CS amp (cont'd), <i>f<sub>L</sub></i> est. from dominant pole <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Optimistic, Pesimistic est <i>f<sub>L</sub></i>, short cct time constants, MOSFET parasitic cap<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 3/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
@@ -204,7 +204,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Spring break, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Spring break, no class</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Spring break, no class</font><!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 3/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
@@ -217,7 +217,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Spring break, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Key to subscripts, HF limit of a MOSFET, <i>f<sub>T</sub></i>, BJT parasitic capacities <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->HF limit of a BJT, <i>f<sub>T</sub></i>, hybrid fwrd emitter gain <i>h<sub>fe</sub></i>, <i>f<sub>T</sub></i> vs. <i>I<sub>C</sub></i>, 2-port analysis<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 3/25------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/144806788/download?download_frd=1"><!-- -->
@@ -232,7 +232,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><font face="times new roman"><i>T</i>(<i>s</i>) = 
 	  <i>F<sub>L</sub></i>(<i>s</i>) <i>A<sub>M</sub> F<sub>H</sub></i>(<i>s</i>)</font> 
 	  and the method of open-circuit time constants<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 4/01------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/145273754/download?download_frd=1"><!-- -->
@@ -245,7 +245,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Application of open circuit time constants to the CG amplifier configuration<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Open circuit time constants appled to CG, cascode<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->HF performance of follower amplifiers (CD and CC)<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 4/08------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/145663147/download?download_frd=1"><!-- -->
@@ -258,7 +258,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->HF performance of: differential amplifier, CS CE with degen, Darlington<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Test #2</b><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><b>Ch 11</b> Hist of feedback, 4 advantages of feedback<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 4/15------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/146116951/download?download_frd=1"><!-- -->
@@ -271,7 +271,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->An implication of duality: Four types of electrical feedback<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->An example of series-shunt feedback&mdash;finding loop gain.  Problem 10.24<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Problem 10.106 (errata), Nyquist stability criterion.  Matlab code for N plot<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 4/22------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/146482146/download?download_frd=1"><!-- -->
@@ -284,18 +284,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->The effect of feedback on closed-loop poles, single & double pole loci<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Tripple-pole root loci, gain and phase margin, margins from Bode plots<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Frequency Compensation, Pole S;litting, <b>Ch 12</b> Intro, amplifier classes<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 4/29------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/146863622/download?download_frd=1"><!-- -->
-	  4/29<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      5/01<!-- --</a><!-- --><br><!-- --<a href=
+	  4/29<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/147042980/download?download_frd=1"><!-- -->
+      5/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       5/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Class A saturation limits, Power, efficiency.  Review PS#12<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Class B and AB power, efficiency, crossover distortion, Problem 12.19<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!--------------------------------------------------------------------- End of table --- -->
 </TABLE></p>
