--- a/S19/170/170_02_S19_DN.HTM
+++ b/S19/170/170_02_S19_DN.HTM
@@ -288,14 +288,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">&nbsp;<br>Th<br>&nbsp;</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  &nbsp;<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      5/02<!-- --</a><!-- --><br><!-- --<a href=
+	  &nbsp;<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/147065906/download?download_frd=1"><!-- -->
+      5/02<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       &nbsp;<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Final report requirements, rubrics.  Schematics for Project #2<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!--------------------------------------------------------------------- End of table --- -->
 </TABLE></p>
