--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/26/2019 2:59 pm)
+                                >(Last update: 5/02/2019 11:14 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -112,7 +112,7 @@ PS                                                           <BR>
         4/26<br><span style="color: #CC4444";>&#9673;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
+		5/03<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -132,7 +132,7 @@ PS                                                           <BR>
         4/19<br><span style="color: #CC4444";>&#9673;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
+		4/26<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
