EGR 323 Daily slides, Syllabus updated with correct exam date

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -290,13 +290,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/146863622/download?download_frd=1"><!-- -->
 	  4/29<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/147042980/download?download_frd=1"><!-- -->
-      5/01<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      5/03<!-- --</a><!-- --></td>
+      5/01<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/147160688/download?download_frd=1"><!-- -->
+      5/03<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Class A saturation limits, Power, efficiency.  Review PS#12<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Class B and AB power, efficiency, crossover distortion, Problem 12.19<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Exam Coverage, date, etc.  <b>Course wrap-up</b>.<!--end comment--></td>  
    </TR><!--------------------------------------------------------------------- End of table --- -->
 </TABLE></p>
 </BODY>
