--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 5/02/2019 11:14 pm)
+                                >(Last update: 5/04/2019 12:04 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -90,17 +90,27 @@ PS                                                           <BR>
         4/26
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        5/03<br><!-- <span style="color: #CC4444";>&#9673;</span> -->
+        5/03<br><span style="color: #CC4444";>&#9673;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
+		5/04<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Output stages, power amplifiers        <br>&nbsp; 
 		Read 12.1, 12.2, 12.3, 12.4, 12.5, 12.6        <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do +12.1, +12.13, +D12.19, *12.40 part (a) only.</DO>
+		<DO>Do +12.1, +12.13, +D12.19, *12.40 part (a) only.</DO><br>&nbsp;
+		                                               <br>&nbsp;<small>
+		Your graded homework is in the bin near Prof. <span style="font-family:Garamond; 
+			font-size:120%">d</span><span style="font-family:Garamond; 
+			font-size:80%">DB</span>'s  <br>&nbsp;
+		office door.  You may pick it up at your convenience.<br>&nbsp;
+		Solutions to PS#11, 12 and 13 will be posted on      <br>&nbsp;
+		Monday at Noon.  Turn late work in before then by    <br>&nbsp;
+		sliding it under prof. <span style="font-family:Garamond; 
+			font-size:120%">d</span><span style="font-family:Garamond; 
+			font-size:80%">DB</span>'s office door.            </small>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 12
