--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/22/2019 5:32 pm)
+                              >(Last update: 5/09/2019 10:42 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -123,7 +123,8 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>4/18</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href="https://dordt.instructure.com/files/147284747/download?download_frd=1"
+		>sol'n</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  DAQ Hardware, Analog, digital signals <br>&nbsp;
 		Read in:  Essick 3rd, Chapters 5, 8, 9         <br>&nbsp;
